chatglm/chatglm_deploy_nobinding.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatglm-deploy-nobinding
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatglm-deploy-nobinding
  template:
    metadata:
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
      labels:
        app: chatglm-deploy-nobinding
    spec:
      containers:
      - env:
        - name: PORT
          value: "8080"
        image: docker201904/chatglm2-6b-api:v2 
        name: chatglmtest-nobinding
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 24000m
            memory: 36Gi
          requests:
            cpu: 23000m
            memory: 36Gi
      serviceAccountName: default
---
kind: Service
apiVersion: v1
metadata:
  name: chatglm-deploy-nobinding
spec:
  type: NodePort
  selector:
    app: chatglm-deploy-nobinding
  ports:
    - name: service
      port: 8080
      targetPort: 8080
      nodePort: 30021
