chatglm/chatglm_deploy_nomodel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatglm-deploy-nomodel
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatglm-deploy-nomodel
  template:
    metadata:
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
      labels:
        app: chatglm-deploy-nomodel
    spec:
      containers:
      - env:
        - name: PORT
          value: "8080"
        image: docker201904/chatglm2-6b-api:v4_build_from_v3
        #ccr-registry.caas.intel.com/cnbench/chatglm2-6b-api:v3_compact
        name: chatglmtest-nomodel
        #command: ["python","service-api.py"]
        volumeMounts:
        - mountPath: /model
          name: model-volume
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 12000m
            memory: 30Gi
          requests:
            cpu: 12000m
            memory: 30Gi
      serviceAccountName: default
      volumes:
      - name: model-volume
        hostPath:
          # directory location on host
          path: /mnt/model
          # this field is optional
          type: Directory
---
kind: Service
apiVersion: v1
metadata:
  name: chatglm-deploy-nomodel
spec:
  type: NodePort
  selector:
    app: chatglm-deploy-nomodel
  ports:
    - name: service
      port: 8080
      targetPort: 8080
      nodePort: 30021
