chatglm/chatglm_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.org/lb-method: "round_robin"
    nginx.org/max-conns: "1"
      #nginx.ingress.kubernetes.io/proxy-buffer-size: "16k" 
      #nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
      #nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "1024m"
    nginx.org/proxy-requests: "4"
spec:
  ingressClassName: nginx
  rules:
    - host: chatglm.intel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatglm-deploy-nomodel
                port:
                  number: 8080
                    #maxConns: 1
